# icon.viewer

./: .gitignore  pyproject.toml
src/: main.py
src/icon_viewer/: __init__.py  controller.py  models.py  service.py
tests/: conftest.py  test_controller.py  test_icon_service.py
