[project]
name = "iconviewer"
version = "0.1.0"
description = "Icon Viewer - view embedded images in .ico files"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Paul Cunningham", email = "pjcunningham@borsuk.co.uk" }
]
dependencies = [
  "flet==0.28.3",
  "pillow>=10.4.0"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "uk.co.borsuk"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "Icon Viewer"

# company name to display in about app dialogs
company = "Borsuk Software Engineering Ltd"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Paul Cunningham"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
    "pytest>=8.4.2",
    "pillow>=10.4.0",
    "pyinstaller>=6.17.0",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}
